# MicroserviciosAZCVB

Parciales/Primer-parcial/: app.js  bd.js  docker-compose.yml  dockerfile  package-lock.json  package.json
Parciales/Primer-parcial/entity/: medico.js
Parciales/SegundoParcial/backend/MS-Autenticacion/: app.js  dataSource.js  package-lock.json  package.json  token.js  user.js
Parciales/SegundoParcial/backend/MS-Envios/: Cargo.toml
Parciales/SegundoParcial/backend/MS-Envios/src/: .env  db.rs  grpc_client.rs  main.rs  models.rs  schema.rs
Parciales/SegundoParcial/backend/MS-Vehiculos/: app.js  package-lock.json  package.json
Prácticas/Docker/Calculadora/: Dockerfile  app.js
Prácticas/Docker/Calculadora/vistas/: index.html
Prácticas/Docker/PW1/: Dockerfile  app.js  db.js  docker-compose.yml  package-lock.json  package.json
Prácticas/Docker/PW1/public/: styles.css
Prácticas/Docker/PW1/views/: index.ejs  new.ejs
Prácticas/Docker/PW2/: app.js  db.js  docker-compose.yml  dockerfile  package-lock.json  package.json
Prácticas/Docker/PW2/models/: Tarea.js
Prácticas/Docker/PW2/public/: styles.css
Prácticas/Docker/PW2/views/: index.ejs
Prácticas/graphql/graphql-biblioteca/: app.js  package-lock.json  package.json
Prácticas/graphql/graphql-biblioteca/entity/: libro.js  prestamo.js
Prácticas/graphql/graphql-padron-js/: ormconfig.json  package-lock.json
Tareas/Tarea 1/at_orm/: app.js  db.js  package.json
Tareas/Tarea 1/at_sql/: app.js  db.js  package-lock.json  package.json
Tareas/Tarea 2/at_mdb/: .gitignore  app.js  db.js  package.json
(+15 files in other folders)
