[package]
name = "MS-Envios"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
actix-web = "4.3"
sqlx = { version = "0.7", features = ["mysql", "runtime-actix-native-tls", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
